add section work finished

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -8,8 +8,8 @@
     padding: 92px 32px !important;
   }
 
-  .contaner-icons {
+  /* .contaner-icons {
     flex-wrap: wrap;
     flex-basis: 30%;
-  }
+  } */
 }
