--- a/src/components/Work/work.css
+++ b/src/components/Work/work.css
@@ -16,9 +16,8 @@
   transform-origin: top;
   top: 0;
   left: 0;
+  border-radius: 10px;
   width: 100%;
-  /* height: 100%; */
-
   transition: transform 0.5s ease;
 }
 
@@ -27,11 +26,45 @@
   transition: transform 4s ease-in-out;
 }
 
-/* .container-img:hover {
-  height: auto;
-} */
-
 .container-img:not(:hover) img {
   transform: translateY(0);
   transition: transform 4s ease;
+}
+
+@media (max-width: 1280px) and (min-width: 1024px) {
+  .container-img {
+    height: 16vh;
+  }
+}
+
+@media (max-width: 1023px) and (min-width: 768px) {
+  .row-vector {
+    left: -131px !important;
+  }
+
+  .rowbt-vector {
+    right: -125px !important;
+    bottom: 112px !important;
+  }
+}
+@media (max-width: 768px) {
+  .row-vector {
+    left: -83px !important;
+    width: 80px !important;
+  }
+
+  .rowbt-vector {
+    right: -90px !important;
+    bottom: 122px !important ;
+    width: 80px !important;
+  }
+}
+@media (max-width: 640px) {
+  .row-vector {
+    display: none;
+  }
+
+  .rowbt-vector {
+    display: none;
+  }
 }
