--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,3 +1,12 @@
+.container-img-hero {
+  width: 300px;
+  height: 300px;
+  background-image: url(../../assets/Hero/img-profile.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+}
+
 @media (max-width: 1024px) {
   .principal-container {
     padding: 92px 100px !important;
@@ -7,9 +16,10 @@
   .principal-container {
     padding: 92px 32px !important;
   }
-
-  /* .contaner-icons {
-    flex-wrap: wrap;
-    flex-basis: 30%;
-  } */
+}
+@media (max-width: 500px) {
+  .container-img-hero {
+    width: 200px;
+    height: 200px;
+  }
 }
